mavensmate/Fabrication/deploy/kalho13@gmail.com/2014-05-14 14:26:31/unpackaged/objects/Job_Part__c.object
<CustomObject>
    <fields>
        <fullName>BOM_Part__c</fullName>
        <label>BOM Part</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Expense__c</fullName>
        <description>For R&amp;D Job Types include expenses incurred.  If there are any details add the information to the description</description>
        <label>Budget Expense</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Imported as Part Description</description>
        <label>Description</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fabrication_Hours_Used__c</fullName>
        <description>The number of hours required to fabricate the parts that have been completed for a single part number</description>
        <formula>( Rollup_Weld_Minutes__c + Rollup_Fit_Minutes__c ) /60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Hours Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Minutes_Per_Part__c</fullName>
        <formula>Fit_Minutes_Per_Part__c + Weld_Minutes_Per_Part__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Minutes Per Part</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Pounds_Per_Hour__c</fullName>
        <formula>Fit_Pounds_Per_Hour__c + Weld_Pounds_Per_Hour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrciation Pounds Per Hour</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Quantity_Complete__c</fullName>
        <formula>(Rollup_Weld_Quantity__c + Rollup_Fit_Quantity__c)/2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Quantity_Remaining__c</fullName>
        <formula>Fabrication_Quantity__c -  Fabrication_Quantity_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Quantity__c</fullName>
        <formula>If(Fabrication__c==true, Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication_Weight_Complete__c</fullName>
        <description>Calculates the weight of the parts that have been completed for a single part number</description>
        <formula>Weight_Single_Part__c * Fabrication_Quantity_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fabrication Weight Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fabrication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fabrication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fit_Minutes_Per_Part__c</fullName>
        <formula>Rollup_Fit_Minutes__c/Rollup_Fit_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fit Minutes Per Part</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fit_Pounds_Per_Hour__c</fullName>
        <formula>(Rollup_Fit_Quantity__c * Weight_Single_Part__c) / (Rollup_Fit_Minutes__c /60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fit Pounds Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Job Parts</relationshipLabel>
        <relationshipName>Job_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Paint_Quantity__c</fullName>
        <formula>If(Paint__c==true, Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paint Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paint_Remaining__c</fullName>
        <formula>Quantity__c  - Rollup_Paint_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paint Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Be_Loaded__c</fullName>
        <formula>Shipping_Quantity__c -  Rollup_Loaded_Items__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Load Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Imported as the quantity of the part to be manufactured</description>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rollup_Fit_Minutes__c</fullName>
        <description>How Many Minutes  Have Been Used for Fitting of this Part</description>
        <inlineHelpText>How Many Minutes  Have Been Used for Fitting of this Part</inlineHelpText>
        <label>Rollup Fit Minutes</label>
        <summarizedField>Job_Fabrication_Detail__c.Work_Entry_Minutes__c</summarizedField>
        <summaryFilterItems>
            <field>Job_Fabrication_Detail__c.Type_Work__c</field>
            <operation>contains</operation>
            <value>F</value>
        </summaryFilterItems>
        <summaryForeignKey>Job_Fabrication_Detail__c.Job_Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Fit_Quantity__c</fullName>
        <description>Total of all Parts fit for this Part Number</description>
        <inlineHelpText>Total of all Parts fit for this Part Number</inlineHelpText>
        <label>Rollup Fit Quantity</label>
        <summarizedField>Job_Fabrication_Detail__c.Work_Entry_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Job_Fabrication_Detail__c.Type_Work__c</field>
            <operation>contains</operation>
            <value>F</value>
        </summaryFilterItems>
        <summaryForeignKey>Job_Fabrication_Detail__c.Job_Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Loaded_Items__c</fullName>
        <label>Load Complete</label>
        <summarizedField>Job_Shipping_Details__c.Number_Loaded__c</summarizedField>
        <summaryForeignKey>Job_Shipping_Details__c.Job_Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Paint_Complete__c</fullName>
        <label>Paint Complete</label>
        <summarizedField>Job_Paint_Detail_del__c.Paint_Complete__c</summarizedField>
        <summaryForeignKey>Job_Paint_Detail_del__c.Job_Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Weld_Minutes__c</fullName>
        <label>Rollup Weld Minutes</label>
        <summarizedField>Job_Fabrication_Detail__c.Work_Entry_Minutes__c</summarizedField>
        <summaryForeignKey>Job_Fabrication_Detail__c.Job_Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Weld_Quantity__c</fullName>
        <label>Rollup Weld Quantity</label>
        <summarizedField>Job_Fabrication_Detail__c.Work_Entry_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Job_Fabrication_Detail__c.Type_Work__c</field>
            <operation>contains</operation>
            <value>W</value>
        </summaryFilterItems>
        <summaryForeignKey>Job_Fabrication_Detail__c.Job_Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_Complete__c</fullName>
        <label>Shipping Complete</label>
        <summarizedField>Job_Shipping_Details__c.Number_Loaded__c</summarizedField>
        <summaryForeignKey>Job_Shipping_Details__c.Job_Part__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_Quantity__c</fullName>
        <formula>If( Shipping__c==true, Quantity__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight_All_Parts__c</fullName>
        <description>Used to rollup the total weight of all parts imported</description>
        <formula>Quantity__c * Weight_Single_Part__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight All Parts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_Single_Part__c</fullName>
        <description>This is an imported value used in the calculation of the weight complete.</description>
        <label>Weight Single Part</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weld_Minutes_Per_Part__c</fullName>
        <formula>Rollup_Weld_Minutes__c/Rollup_Weld_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weld Minutes Per Part</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weld_Pounds_Per_Hour__c</fullName>
        <formula>(Rollup_Weld_Quantity__c * Weight_Single_Part__c)/(Rollup_Weld_Minutes__c /60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weld Pounds Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Job Part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Shipping_Items_Pending_Load</fullName>
        <columns>Job__c</columns>
        <columns>NAME</columns>
        <columns>Quantity_To_Be_Loaded__c</columns>
        <columns>Rollup_Loaded_Items__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Shipping__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Quantity_To_Be_Loaded__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Shipping Items Pending Load</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Job Part Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IS00000001DAUMA2_00NS00000011utNMAQ</fullName>
        <active>true</active>
        <field>Job_Part_QA_Detail__c.Job_PartLU__c</field>
        <filterItems>
            <field>Job_Part__c.Job__c</field>
            <operation>equals</operation>
            <valueField>$Source.Job__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Job Part QA Detail_Job Part</name>
        <sourceObject>Job_Part_QA_Detail__c</sourceObject>
    </namedFilters>
    <pluralLabel>Job Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>